src/test/deca/syntax/valid/custom/object/print_div_function.deca
// Description:
//   Print condition with a function and div.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   print(func(a / c));
}
