src/test/deca/syntax/invalid/custom/object/print_instance_function.deca
// Description:
//   Print condition with a function and instanceof.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   print(func(a instanceof ));
}
